--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-cli-piwik",
-  "version": "0.0.5",
-  "description": "Inject the Piwik tracking code into an ember-cli application",
+  "name": "ember-cli-matomo",
+  "version": "0.2.0",
+  "description": "Inject Matomo/Piwik tracking into an ember-cli application",
   "directories": {
     "doc": "doc",
     "test": "tests"
